--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,100 @@
     <string name="whatWeDo">Innovating for Your Well-Being </string>
     <string name="copyright">© 2023 LifeTrack. All rights reserved.</string>
     <string name="app_description">LifeTrack is your digital health companion app providing telemedicine, health tracking, and emergency alerts. Our mission is to empower patients with accessible health data and real-time medical assistance.</string>
+
+    <!-- Common -->
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
+    <string name="back">Back</string>
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
+    <string name="done">Done</string>
+    <string name="loading">Loading...</string>
+    <string name="error">Error</string>
+    <string name="success">Success</string>
+
+    <!-- Navigation -->
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="menu">Menu</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
+    <string name="about">About</string>
+
+    <!-- Profile Screen -->
+    <string name="personal_information">Personal Information</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="full_name">Full Name</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="member_since">Member Since</string>
+    <string name="last_updated">Last Updated</string>
+    <string name="account_role">Account Role</string>
+    <string name="edit_your_profile">Edit Your Profile</string>
+    <string name="profile_updated_successfully">Profile updated successfully!</string>
+
+    <!-- Language -->
+    <string name="change_language">Change Language</string>
+    <string name="select_preferred_language">Select your preferred language</string>
+    <string name="choose_language_description">Choose the language in which you want to use the app</string>
+    <string name="language_change_note">💡 Language changes will take effect after restarting the app.</string>
+
+    <!-- Appointments -->
+    <string name="appointments">Appointments</string>
+    <string name="upcoming_appointments">Upcoming Appointments</string>
+    <string name="book_appointment">Book Appointment</string>
+    <string name="doctor">Doctor</string>
+    <string name="hospital">Hospital</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+
+    <!-- Prescriptions -->
+    <string name="prescriptions">Prescriptions</string>
+    <string name="medication">Medication</string>
+    <string name="dosage">Dosage</string>
+    <string name="instructions">Instructions</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="active">Active</string>
+    <string name="history">History</string>
+    <string name="refill_due">Refill Due</string>
+
+    <!-- Health -->
+    <string name="vitals">Vitals</string>
+    <string name="heart_rate">Heart Rate</string>
+    <string name="blood_pressure">Blood Pressure</string>
+    <string name="temperature">Temperature</string>
+    <string name="spo2">SpO2</string>
+    <string name="steps">Steps</string>
+    <string name="sleep">Sleep</string>
+    <string name="activity">Activity</string>
+
+    <!-- Authentication -->
+    <string name="login">Login</string>
+    <string name="signup">Sign Up</string>
+    <string name="logout">Logout</string>
+    <string name="email_address">Email Address</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="remember_me">Remember Me</string>
+    <string name="login_failed">Login failed. Please check your credentials.</string>
+    <string name="signup_failed">Sign up failed. Please try again.</string>
+
+    <!-- Messages -->
+    <string name="welcome">Welcome</string>
+    <string name="no_data_available">No data available</string>
+    <string name="try_again">Try Again</string>
+    <string name="network_error">Network error. Please check your connection.</string>
+    <string name="delete_my_account">Delete My Account</string>
+    <string name="my_medical_history">My Medical History</string>
+    <string name="change_password">Change Password</string>
+    <string name="account_information">Account Information</string>
+    <string name="medical_records">Medical Records</string>
+    <string name="lab_tests">Lab Tests</string>
+    <string name="visit_history">Visit History</string>
 </resources>
