--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,8 +2,15 @@
 <resources>
     <string name="app_name">LifeTrack</string>
     <string name="app_version">2.0.0</string>
+    <string name="whoAmI">contact@lifetrack.org</string>
+    <string name="whoWeAre">LifeTrack Health Solutions</string>
+    <string name="whoAmISite">www.lifetrack.org</string>
+    <string name="companion">LifeTrack Health Companion</string>
+    <string name="companionDesc">Your complete health management solution</string>
+    <string name="whatWeDo">Innovating for Your Well-Being </string>
+    <string name="copyright">© 2023 LifeTrack. All rights reserved.</string>
+    <string name="app_description">LifeTrack is your digital health companion app providing telemedicine, health tracking, and emergency alerts. Our mission is to empower patients with accessible health data and real-time medical assistance.</string>
 
-    <!-- Common -->
     <string name="ok">OK</string>
     <string name="cancel">Annuler</string>
     <string name="save">Enregistrer</string>
@@ -13,11 +20,10 @@
     <string name="next">Suivant</string>
     <string name="skip">Passer</string>
     <string name="done">Terminé</string>
-    <string name="loading">Chargement...</string>
+    <string name="loading">Chargement…</string>
     <string name="error">Erreur</string>
     <string name="success">Succès</string>
 
-    <!-- Navigation -->
     <string name="home">Accueil</string>
     <string name="profile">Profil</string>
     <string name="menu">Menu</string>
@@ -25,7 +31,6 @@
     <string name="help">Aide</string>
     <string name="about">À Propos</string>
 
-    <!-- Profile Screen -->
     <string name="personal_information">Informations Personnelles</string>
     <string name="edit_profile">Modifier le Profil</string>
     <string name="save_changes">Enregistrer les Modifications</string>
