--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">LifeTrack</string>
     <string name="app_version">2.0.0</string>
-    <string name="whoAmI">contact@lifetrack.org</string>
+    <string name="whoAmI" translatable="false">contact@lifetrack.org</string>
     <string name="whoWeAre">LifeTrack Health Solutions</string>
-    <string name="whoAmISite">www.lifetrack.org</string>
+    <string name="whoAmISite" translatable="false">www.lifetrack.org</string>
     <string name="companion">LifeTrack Health Companion</string>
     <string name="companionDesc">Your complete health management solution</string>
     <string name="whatWeDo">Innovating for Your Well-Being </string>
@@ -20,7 +20,7 @@
     <string name="next">Next</string>
     <string name="skip">Skip</string>
     <string name="done">Done</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
     <string name="error">Error</string>
     <string name="success">Success</string>
 
