--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -90,4 +90,45 @@
     <string name="visit_history">Historique des Visites</string>
     <string name="dismiss">Fermer</string>
     <string name="account_overview">Aperçu du Compte.</string>
+    <string name="email_notifications">Notifications par e-mail</string>
+    <string name="in_app_animations">Animations dans l\'application</string>
+    <string name="pdc">Consentement aux données du patient</string>
+    <string name="caro_animations">Animations du carrousel</string>
+    <string name="app_notifications">Notifications de l\'application</string>
+    <string name="ongoing">En cours</string>
+    <string name="completed">Terminé</string>
+    <string name="follow_up">Suivi</string>
+    <string name="recent_visits">Visites récentes</string>
+    <string name="oldest_first">Les plus anciens en premier</string>
+    <string name="hospital_a2z">Hôpitaux A-Z</string>
+    <string name="upcoming">À venir</string>
+    <string name="attended">Présenté</string>
+    <string name="recently_booked">Récemment réservé</string>
+    <string name="dismissed">Ignoré</string>
+    <string name="cancelled">Annulé</string>
+    <string name="rescheduled">Reporté</string>
+    <string name="about_lt">À propos de LifeTrack</string>
+    <string name="emergency_contact">Contact d\'urgence</string>
+    <string name="key_features">Fonctionnalités clés</string>
+    <string name="med_timeline_records">Chronologie et dossiers médicaux</string>
+    <string name="med_timeline_records_desc">Organisez et accédez facilement à votre historique médical.</string>
+    <string name="tele_med_appointment">Rendez-vous de télémedecine</string>
+    <string name="tele_med_appointment_desc">Connectez-vous avec des professionnels de santé depuis chez vous.</string>
+    <string name="emergency_triggers_and_alerts">Déclencheurs et alertes d\'urgence</string>
+    <string name="emergency_triggers_and_alerts_desc">Informez instantanément vos contacts en cas d\'urgence.</string>
+    <string name="med_reminder">Rappels de médicaments</string>
+    <string name="med_reminder_desc">Ne manquez jamais une dose grâce aux alertes personnalisables.</string>
+    <string name="hiva">Analyses et visualisations de santé</string>
+    <string name="hiva_desc">Accédez à des statistiques et des analyses de santé en temps réel propulsées par Alma.</string>
+    <string name="alma">Assistant de santé Alma</string>
+    <string name="alma_desc">Assistant de santé polyvalent propulsé par l\'I.A.</string>
+    <string name="presc_manager">Gestionnaire d\'ordonnances en ligne</string>
+    <string name="presc_manager_desc">Gérez toutes vos ordonnances depuis votre mobile.</string>
+    <string name="fuva">Suivis et rendez-vous médicaux</string>
+    <string name="fuva_desc">Consultez et gérez tous vos suivis et rendez-vous médicaux.</string>
+    <string name="version">Version</string>
+    <string name="connect_with_us">Contactez-nous via :</string>
+    <string name="developer">Développeur</string>
+    <string name="sort_by">Trier par</string>
+    <string name="visits">Visites</string>
 </resources>
