--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,6 @@
     <string name="whatWeDo">Innovando para su bienestar</string>
     <string name="copyright">© 2023 LifeTrack. Todos los derechos reservados.</string>
     <string name="app_description">LifeTrack es tu aplicación compañera de salud digital que ofrece telemedicina, seguimiento de la salud y alertas de emergencia. Nuestra misión es empoderar a los pacientes con datos de salud accesibles y asistencia médica en tiempo real.</string>
-
     <string name="ok">Aceptar</string>
     <string name="cancel">Cancelar</string>
     <string name="save">Guardar</string>
@@ -23,7 +22,6 @@
     <string name="loading">Cargando…</string>
     <string name="error">Error</string>
     <string name="success">Éxito</string>
-
     <string name="home">Inicio</string>
     <string name="profile">Perfil</string>
     <string name="menu">Menú</string>
@@ -31,7 +29,6 @@
     <string name="help">Ayuda</string>
     <string name="about">Acerca de</string>
     <string name="medical_records">Registros Médicos</string>
-
     <string name="personal_information">Información Personal</string>
     <string name="edit_profile">Editar Perfil</string>
     <string name="save_changes">Guardar Cambios</string>
@@ -44,14 +41,10 @@
     <string name="account_role">Rol de Cuenta</string>
     <string name="edit_your_profile">Edite su Perfil</string>
     <string name="profile_updated_successfully">¡Perfil actualizado correctamente!</string>
-
-    <!-- Language -->
     <string name="change_language">Cambiar Idioma</string>
     <string name="select_preferred_language">Selecciona tu idioma preferido</string>
     <string name="choose_language_description">Elige el idioma en el que deseas usar la aplicación</string>
     <string name="language_change_note">💡 Los cambios de idioma tendrán efecto después de reiniciar la aplicación.</string>
-
-    <!-- Appointments -->
     <string name="appointments">Citas</string>
     <string name="upcoming_appointments">Próximas Citas</string>
     <string name="book_appointment">Reservar Cita</string>
@@ -59,8 +52,6 @@
     <string name="hospital">Hospital</string>
     <string name="date">Fecha</string>
     <string name="time">Hora</string>
-
-    <!-- Prescriptions -->
     <string name="prescriptions">Recetas</string>
     <string name="medication">Medicamento</string>
     <string name="dosage">Dosis</string>
@@ -70,8 +61,6 @@
     <string name="active">Activa</string>
     <string name="history">Historial</string>
     <string name="refill_due">Recarga Pendiente</string>
-
-    <!-- Health -->
     <string name="vitals">Signos Vitales</string>
     <string name="heart_rate">Frecuencia Cardíaca</string>
     <string name="blood_pressure">Presión Arterial</string>
@@ -80,8 +69,6 @@
     <string name="steps">Pasos</string>
     <string name="sleep">Sueño</string>
     <string name="activity">Actividad</string>
-
-    <!-- Authentication -->
     <string name="login">Iniciar Sesión</string>
     <string name="signup">Registrarse</string>
     <string name="logout">Cerrar Sesión</string>
@@ -91,8 +78,6 @@
     <string name="remember_me">Recuérdame</string>
     <string name="login_failed">Inicio de sesión fallido. Verifique sus credenciales.</string>
     <string name="signup_failed">El registro falló. Por favor, intente de nuevo.</string>
-
-    <!-- Messages -->
     <string name="welcome">Bienvenida</string>
     <string name="no_data_available">No hay datos disponibles</string>
     <string name="try_again">Intentar de Nuevo</string>
@@ -105,4 +90,45 @@
     <string name="visit_history">Historial de Visitas</string>
     <string name="dismiss">Descartar</string>
     <string name="account_overview">Resumen de la Cuenta.</string>
+    <string name="email_notifications">Notificaciones por correo</string>
+    <string name="in_app_animations">Animaciones en la aplicación</string>
+    <string name="pdc">Consentimiento de datos del paciente</string>
+    <string name="caro_animations">Animaciones de carrusel</string>
+    <string name="app_notifications">Notificaciones de la aplicación</string>
+    <string name="ongoing">En curso</string>
+    <string name="completed">Completado</string>
+    <string name="follow_up">Seguimiento</string>
+    <string name="recent_visits">Visitas recientes</string>
+    <string name="oldest_first">Más antiguos primero</string>
+    <string name="hospital_a2z">Hospitales A-Z</string>
+    <string name="upcoming">Próximas</string>
+    <string name="attended">Asistido</string>
+    <string name="recently_booked">Reservado recientemente</string>
+    <string name="dismissed">Descartado</string>
+    <string name="cancelled">Cancelado</string>
+    <string name="rescheduled">Reprogramado</string>
+    <string name="about_lt">Acerca de LifeTrack</string>
+    <string name="emergency_contact">Contacto de emergencia</string>
+    <string name="key_features">Funciones principales</string>
+    <string name="med_timeline_records">Historial y registros médicos</string>
+    <string name="med_timeline_records_desc">Organice y acceda a su historial médico con facilidad.</string>
+    <string name="tele_med_appointment">Citas de telemedicina</string>
+    <string name="tele_med_appointment_desc">Conéctese con profesionales de la salud desde casa.</string>
+    <string name="emergency_triggers_and_alerts">Activadores y alertas de emergencia</string>
+    <string name="emergency_triggers_and_alerts_desc">Notifique instantáneamente a sus contactos en situaciones urgentes.</string>
+    <string name="med_reminder">Recordatorios de medicación</string>
+    <string name="med_reminder_desc">No pierda nunca una dosis con alertas personalizables.</string>
+    <string name="hiva">Información, visualizaciones y análisis de salud</string>
+    <string name="hiva_desc">Acceda a visualizaciones de salud, estadísticas e información en tiempo real impulsada por Alma.</string>
+    <string name="alma">Asistente de salud Alma</string>
+    <string name="alma_desc">Asistente de salud versátil impulsado por I.A.</string>
+    <string name="presc_manager">Gestor de recetas electrónicas</string>
+    <string name="presc_manager_desc">Gestione todas sus recetas desde su móvil.</string>
+    <string name="fuva">Seguimientos y citas médicas</string>
+    <string name="fuva_desc">Vea y gestione todos los seguimientos y citas médicas.</string>
+    <string name="version">Versión</string>
+    <string name="connect_with_us">Conéctese con nosotros a través de:</string>
+    <string name="developer">Desarrollador</string>
+    <string name="sort_by">Ordenar por</string>
+    <string name="visits">Visitas</string>
 </resources>
