--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,7 +139,7 @@
     <string name="developer">Developer</string>
     <string name="sort_by">Sort By</string>
     <string name="visits">Visits</string>
-<!--    <string name=""></string>-->
+    <string name="book_new">Book New</string>
 <!--    <string name=""></string>-->
 <!--    <string name=""></string>-->
 <!--    <string name=""></string>-->
